<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="de.thkoeln.colab.fearlesschange.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/dashboard_fragment" />
    <fragment
        android:id="@+id/nav_favorites"
        android:name="de.thkoeln.colab.fearlesschange.ui.favorites.FavoritesFragment"
        android:label="@string/favorites_title"
        tools:layout="@layout/favorites_fragment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="de.thkoeln.colab.fearlesschange.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/settings_fragment" />
    <fragment
        android:id="@+id/nav_overview"
        android:name="de.thkoeln.colab.fearlesschange.ui.overview.OverviewFragment"
        android:label="overview_fragment"
        tools:layout="@layout/overview_fragment" />
</navigation>