<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_user"
            style="@style/SettingsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/settings_header_user" />


        <LinearLayout
            android:id="@+id/reset_most_clicked_item"
            style="@style/SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/settings_item_reset_most_clicked_card_icon"
                style="@style/SettingsIcon.UserSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description_calendar"
                android:src="@drawable/ic_today_white" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsItemLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_item_reset_most_clicked_cards_label" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/reset_favorites_item"
            style="@style/SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/settings_item_reset_favorites_icon"
                style="@style/SettingsIcon.UserSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description_heart"
                android:src="@drawable/ic_favorite_primary" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsItemLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_item_reset_favorites_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reset_notes_item"
            style="@style/SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/settings_item_reset_notes_icon"
                style="@style/SettingsIcon.UserSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description_notes"
                android:src="@drawable/ic_assignment_white" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsItemLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_item_reset_notes_label" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_system"
            style="@style/SettingsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_header_system" />

        <LinearLayout
            android:id="@+id/reset_to_factory_item"
            style="@style/SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/settings_item_reset_to_factory_settings"
                style="@style/SettingsIcon.SystemSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description_reset"
                android:src="@drawable/ic_reset_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView2"
                style="@style/SettingsItemLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_item_reset_to_factory_settings_label" />
        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>