<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="36dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/create_note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@color/note_color"
        android:paddingBottom="36dp"
        android:paddingStart="@dimen/defaultPadding"
        android:paddingTop="@dimen/defaultPadding"
        android:paddingEnd="@dimen/defaultPadding">

        <ImageView
            android:id="@+id/create_note_dialog_pin_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="@dimen/default_margin"
            android:src="@drawable/pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/create_note_note_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/note_font"
            android:hint="@string/hint_title"
            android:maxLines="1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_note_dialog_pin_icon" />

        <EditText
            android:id="@+id/create_note_note_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/note_font"
            android:hint="@string/hint_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_note_note_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_note_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/positive_button_color"
        android:src="@drawable/ic_check_white_24dp"
        android:text="@string/action_ok"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_anchor="@id/create_note_content"
        app:layout_anchorGravity="bottom|end" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
