<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_preview_card"
        style="@style/Card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            style="@style/CardWrapper"
            android:id="@+id/card_preview_wrapper"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="1000dp"
                android:layout_height="0dp"
                android:src="@drawable/card_title_bg"
                android:scaleType="fitXY"
                android:rotation="-2"
                app:layout_constraintTop_toTopOf="@id/card_preview_card_title"
                app:layout_constraintBottom_toBottomOf="@id/card_preview_card_title"
                app:layout_constraintStart_toStartOf="@id/card_preview_card_title"
                app:layout_constraintEnd_toEndOf="@id/card_preview_card_title"
                android:contentDescription="@string/image_description_title_bg" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/CardTitle"
                android:id="@+id/card_preview_card_title"
                android:layout_width="0dp"
                android:textSize="10sp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/CardContentWrapper"
                android:id="@+id/card_preview_content"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_preview_card_title"
                app:layout_constraintVertical_bias="0"
                xmlns:app="http://schemas.android.com/apk/res-auto">

                <ImageView
                    android:id="@+id/card_preview_card_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    app:layout_constraintDimensionRatio="16:9"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/image_description_pattern_image" />
                <TextView
                    android:id="@+id/card_preview_card_summary"
                    android:textSize="10sp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="top|center"
                    app:layout_constraintTop_toBottomOf="@id/card_preview_card_image"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:maxLines="6"
                    android:ellipsize="end"/>


            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>



    <ImageView
        android:id="@+id/card_preview_favorite_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:rotation="-6"
        android:elevation="3dp"
        android:src="@drawable/ic_favorite_full_red"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_description_favorite" />

    <ImageView
        android:id="@+id/card_preview_notes_icon"
        android:rotation="6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:elevation="3dp"
        android:visibility="gone"
        android:src="@drawable/preview_note_count_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_description_notes" />

    <TextView
        android:id="@+id/card_preview_notes_count"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="6"
        android:visibility="gone"
        android:fontFamily="@font/note_font"
        android:elevation="3dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@id/card_preview_notes_icon"
        app:layout_constraintTop_toTopOf="@id/card_preview_notes_icon"
        app:layout_constraintBottom_toBottomOf="@id/card_preview_notes_icon"
        app:layout_constraintStart_toStartOf="@id/card_preview_notes_icon"
        android:textAlignment="center"
        android:gravity="center" />
</android.support.constraint.ConstraintLayout>