<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pattern_preview_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/PatternCardView"
        android:id="@+id/pattern_preview_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pattern_preview_content_wrapper"
            style="@style/PatternCardViewMainWrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/pattern_preview_image"
                style="@style/PatternCardViewImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description_pattern_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pattern_preview_title"
                style="@style/PatternCardViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pattern_preview_image" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pattern_preview_content"
                style="@style/PatternCardViewContentWrapper"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/pattern_preview_title"
                app:layout_constraintVertical_bias="0">


                <de.thkoeln.colab.fearlesschange.view.custom.ResponsiveTextView
                    style="@style/PatternCardViewText"
                    android:id="@+id/pattern_preview_summary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <ImageView
        style="@style/PatternCardFavoriteIcon"
        android:id="@+id/pattern_preview_favorite_icon"
        android:contentDescription="@string/image_description_favorite"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        style="@style/PatternCardNotesIcon"
        android:id="@+id/pattern_preview_notes_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_description_notes"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/pattern_preview_notes_count"
        app:layout_constraintEnd_toEndOf="@id/pattern_preview_notes_count"
        app:layout_constraintStart_toStartOf="@id/pattern_preview_notes_count"
        app:layout_constraintTop_toTopOf="@id/pattern_preview_notes_count" />

    <TextView
        style="@style/PatternCardNoteCount"
        android:id="@+id/pattern_preview_notes_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>